force-app/main/default/objects/AF_Payment__c/fields/AF_Account__c.field-meta.xml
<CustomField>
    <fullName>AF_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup, never Master-Detail child of Invoice (C-1/A5) — open payment on Account is supported without an Invoice.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>AF_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>