force-app/main/default/objects/AF_Payment__c/fields/AF_Amount__c.field-meta.xml
<CustomField>
    <fullName>AF_Amount__c</fullName>
    <description>Sum vs Keyloop invoice total gates Closed Won.</description>
    <label>Payment Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>