force-app/main/default/objects/AF_Payment__c/fields/AF_CashierEmailSent__c.field-meta.xml
<CustomField>
    <fullName>AF_CashierEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cashier Email Sent?</label>
    <type>Checkbox</type>
</CustomField>