force-app/main/default/objects/AF_Payment__c/fields/AF_CashierEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>AF_CashierEmailSentDate__c</fullName>
    <label>Cashier Email Sent Date</label>
    <type>DateTime</type>
</CustomField>