force-app/main/default/objects/AF_Payment__c/fields/AF_ExternalMatchingReference__c.field-meta.xml
<CustomField>
    <fullName>AF_ExternalMatchingReference__c</fullName>
    <label>External Matching Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>