force-app/main/default/objects/AF_Payment__c/fields/AF_IntegrationReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_IntegrationReceivedDate__c</fullName>
    <label>Integration Received Date</label>
    <type>DateTime</type>
</CustomField>