force-app/main/default/objects/AF_Payment__c/fields/AF_InvoiceSummary__c.field-meta.xml
<CustomField>
    <fullName>AF_InvoiceSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional by design — reservation-stage deposits precede any invoice.</description>
    <label>Invoice Summary</label>
    <referenceTo>AF_InvoiceSummary__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>AF_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>