force-app/main/default/objects/AF_Payment__c/fields/AF_KeyloopPaymentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopPaymentReference__c</fullName>
    <label>Keyloop Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>