force-app/main/default/objects/AF_Payment__c/fields/AF_NOCRecorded__c.field-meta.xml
<CustomField>
    <fullName>AF_NOCRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Blocks invoice on payee mismatch without a No-Objection-Certificate on file.</description>
    <label>NOC Recorded?</label>
    <type>Checkbox</type>
</CustomField>