force-app/main/default/objects/AF_Payment__c/fields/AF_Notes__c.field-meta.xml
<CustomField>
    <fullName>AF_Notes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>