force-app/main/default/objects/AF_Payment__c/fields/AF_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AF_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>AF_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>