force-app/main/default/objects/AF_Payment__c/fields/AF_PayeeName__c.field-meta.xml
<CustomField>
    <fullName>AF_PayeeName__c</fullName>
    <description>Name on the payment instrument (cheque/transfer), as recorded by the Cashier. Compared against the linked Account name to detect a payee mismatch requiring NOC.</description>
    <label>Payee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>