force-app/main/default/objects/AF_Payment__c/fields/AF_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>AF_PaymentDate__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>