force-app/main/default/objects/AF_Payment__c/fields/AF_ProofReference__c.field-meta.xml
<CustomField>
    <fullName>AF_ProofReference__c</fullName>
    <description>Rep-attached receipt file reference; required for Closed Won gate. Actual file lives via ContentDocumentLink.</description>
    <label>Proof of Payment / Receipt Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>