force-app/main/default/objects/AF_Payment__c/fields/AF_Quote__c.field-meta.xml
<CustomField>
    <fullName>AF_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>AF_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>