force-app/main/default/objects/AF_Payment__c/fields/AF_SFPaymentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_SFPaymentReference__c</fullName>
    <description>Idempotent inbound match key for the Keyloop payment-confirmation event.</description>
    <externalId>true</externalId>
    <label>Salesforce Payment Reference ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>