force-app/main/default/objects/AF_Payment__c/fields/AF_Status__c.field-meta.xml
<CustomField>
    <fullName>AF_Status__c</fullName>
    <description>Payment verification state. ALF-RS-08 FR12 gates Reservation Contract generation until the payment is Paid / Verified; before this field existed the gate had nothing to read. Pending = recorded but unconfirmed, Paid / Verified = cashier or finance has confirmed receipt, Rejected = proof rejected, Refunded = reversed after cancellation.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Paid / Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>