force-app/main/default/objects/AF_Payment__c/fields/AF_VehicleReservation__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleReservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Reservation</label>
    <referenceTo>AF_VehicleReservation__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>AF_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>