force-app/main/default/objects/AF_Payment__c/fields/AF_VerifiedBy__c.field-meta.xml
<CustomField>
    <fullName>AF_VerifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who confirmed the payment. Stamped alongside AF_VerifiedDate__c so the FR12 gate records not just that verification happened but who is accountable for it.</description>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Payments</relationshipLabel>
    <relationshipName>AF_VerifiedPayments</relationshipName>
    <type>Lookup</type>
</CustomField>