force-app/main/default/objects/AF_Payment__c/fields/AF_VerifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_VerifiedDate__c</fullName>
    <description>Stamped by AF_FL_Payment_StampVerification when AF_Status__c becomes Paid / Verified. Gives the reservation contract an auditable &quot;deposit confirmed on&quot; date.</description>
    <label>Verified Date</label>
    <type>DateTime</type>
</CustomField>