force-app/main/default/objects/AF_Payment__c/validationRules/AF_VR_AmountPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_AmountPositive</fullName>
    <active>true</active>
    <description>A recorded payment must move money. Zero or negative amounts would corrupt the verified-deposit total the reservation contract prints.</description>
    <errorConditionFormula>AF_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>AF_Amount__c</errorDisplayField>
    <errorMessage>Payment amount must be greater than zero.</errorMessage>
</ValidationRule>